@@ -1,5 +1,6 @@
 201x-xx-xx:
     * create README.md
+    * fix search highlighting (hlsearch) in firefox 51
 
 
 2017-02-01:
